# ledgerza

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  cli.md  csv-format.md  parsers.md  usage.md
finparse/src/: __init__.py
ledgerza/: __init__.py  categorizer.py  cleaner.py  cli.py  detector.py  main.py  normalizer.py  reporter.py  schema.py
ledgerza/parsers/: base.py  capitec.py  fnb.py
tests/: test_categorizer.py  test_cleaner.py  test_normalizer.py  test_parsers.py  test_reporter.py
